deploy/service_k8s/svc_auth.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-auth
  labels:
    app: svc-auth
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: svc-auth
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: svc-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: svc-auth
  template:
    metadata:
      labels:
        app: svc-auth
    spec:
      containers:
        - name: svc-auth
          command: [
            "/auth",
            "--registry=kubernetes",
          ]
          image: hub.fileserver.com/filestore/auth
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8080
            name: auth-port
